--- a/src/main/resources/me/studentservice/ui/fxml/Main.fxml
+++ b/src/main/resources/me/studentservice/ui/fxml/Main.fxml
@@ -1,16 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="me.studentservice.ui.controller.MainController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="me.studentservice.ui.controller.MainController">
+   <children>
+      <TableView fx:id="table" layoutX="10.0" layoutY="236.0" onKeyPressed="#refresh" prefHeight="350.0" prefWidth="980.0" AnchorPane.leftAnchor="10.0">
+         <columns>
+            <TableColumn fx:id="name" prefWidth="75.0" text="Ime" />
+            <TableColumn fx:id="surname" prefWidth="75.0" text="Prezime" />
+            <TableColumn fx:id="address" prefWidth="75.0" text="Adresa" />
+            <TableColumn fx:id="gender" prefWidth="75.0" text="Pol" />
+            <TableColumn fx:id="birthDate" minWidth="30.0" prefWidth="75.0" text="Datum rodjenja" />
+            <TableColumn fx:id="father" prefWidth="75.0" text="Otac" />
+            <TableColumn fx:id="mother" prefWidth="75.0" text="Majka" />
+            <TableColumn fx:id="gpa" maxWidth="2500.0" prefWidth="75.0" text="Prosek" />
+            <TableColumn fx:id="previousGpa" minWidth="35.0" prefWidth="75.0" text="Uspeh (4 godine)" />
+            <TableColumn fx:id="schoolClass" prefWidth="75.0" text="Odeljenje" />
+            <TableColumn fx:id="homeroom" minWidth="50.0" prefWidth="75.0" text="Odeljenski starešina" />
+         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
+      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#insert" prefHeight="50.0" prefWidth="150.0" text="Dodaj učenika">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
+      <Button fx:id="editButton" layoutX="14.0" layoutY="164.0" mnemonicParsing="false" onAction="#update" prefHeight="50.0" prefWidth="150.0" text="Izmeni učenika" textFill="RED">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
+      <Button layoutX="14.0" layoutY="92.0" mnemonicParsing="false" onAction="#delete" prefHeight="50.0" prefWidth="150.0" text="Obriši učenika">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
+      <TableView fx:id="subjectTable" layoutX="387.0" layoutY="14.0" prefHeight="200.0" prefWidth="300.0">
+        <columns>
+          <TableColumn fx:id="subjectName" prefWidth="237.0" text="Predmet" />
+          <TableColumn fx:id="subjectClass" maxWidth="1000.0" minWidth="0.0" prefWidth="60.0" text="Odeljenje" />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
+      <ChoiceBox fx:id="classPicker" layoutX="185.0" layoutY="105.0" prefWidth="150.0" />
+      <Button fx:id="generateCertificate" layoutX="185.0" layoutY="14.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="150.0" text="Generiši potvrdu">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Button>
+      <ImageView fx:id="logo" fitHeight="200.0" fitWidth="265.0" layoutX="737.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
+      <ChoiceBox fx:id="genderPicker" layoutX="185.0" layoutY="177.0" prefWidth="150.0" />
+   </children>
+</AnchorPane>
