--- a/src/main/resources/me/studentservice/ui/fxml/Main.fxml
+++ b/src/main/resources/me/studentservice/ui/fxml/Main.fxml
@@ -32,7 +32,7 @@
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
-      <Button fx:id="editButton" layoutX="14.0" layoutY="164.0" mnemonicParsing="false" onAction="#update" prefHeight="50.0" prefWidth="150.0" text="Izmeni učenika" textFill="RED">
+      <Button fx:id="editButton" layoutX="14.0" layoutY="164.0" mnemonicParsing="false" onAction="#update" prefHeight="50.0" prefWidth="150.0" text="Izmeni učenika">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
@@ -50,7 +50,7 @@
          </columnResizePolicy>
       </TableView>
       <ChoiceBox fx:id="classPicker" layoutX="185.0" layoutY="105.0" prefWidth="150.0" />
-      <Button fx:id="generateCertificate" layoutX="185.0" layoutY="14.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="150.0" text="Generiši potvrdu">
+      <Button layoutX="185.0" layoutY="14.0" mnemonicParsing="false" onAction="#generateCertificate" prefHeight="50.0" prefWidth="150.0" text="Generiši potvrdu">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
