--- a/src/main/resources/me/studentservice/ui/fxml/Main.fxml
+++ b/src/main/resources/me/studentservice/ui/fxml/Main.fxml
@@ -32,7 +32,7 @@
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
-      <Button fx:id="editButton" layoutX="14.0" layoutY="164.0" mnemonicParsing="false" onAction="#update" prefHeight="50.0" prefWidth="150.0" text="Izmeni učenika">
+      <Button layoutX="14.0" layoutY="164.0" mnemonicParsing="false" onAction="#update" prefHeight="50.0" prefWidth="150.0" text="Izmeni učenika">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
