--- a/src/main/resources/me/studentservice/ui/fxml/Certificate.fxml
+++ b/src/main/resources/me/studentservice/ui/fxml/Certificate.fxml
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.shape.Line?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="700.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
         <children>
             <Label layoutX="932.0" layoutY="90.0" text="ПОТВРДА">
                 <font>
@@ -43,7 +37,7 @@
                     <TextField fx:id="date" disable="true" editable="false" layoutX="80.0" layoutY="13.0" style="-fx-text-fill: blue;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                 </children>
             </GridPane>
-            <GridPane layoutX="38.0" layoutY="163.0" prefHeight="413.0" prefWidth="1270.0">
+            <GridPane layoutX="15.0" layoutY="158.0" prefHeight="413.0" prefWidth="1270.0">
                 <columnConstraints>
                     <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="222.0" minWidth="10.0" prefWidth="147.0" />
                     <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="313.0" minWidth="10.0" prefWidth="235.0" />
@@ -161,14 +155,14 @@
                     </Label>
                 </children>
             </GridPane>
-            <Label layoutX="1169.0" layoutY="600.0" text="Директор школе" />
-            <Label layoutX="1138.0" layoutY="658.0" text="Снежана Ивеља">
+            <Label layoutX="1124.0" layoutY="601.0" text="Директор школе" />
+            <Label layoutX="1111.0" layoutY="657.0" text="Снежана Ивеља">
                 <font>
                     <Font size="16.0" />
                 </font>
             </Label>
-            <Line endX="100.0" layoutX="1197.0" layoutY="658.0" startX="-100.0" />
-            <Label layoutX="659.0" layoutY="609.0" text="(М. Р.)" />
+            <Line endX="100.0" layoutX="1170.0" layoutY="658.0" startX="-100.0" />
+            <Label layoutX="633.0" layoutY="610.0" text="(М. Р.)" />
       <Button fx:id="button" layoutX="159.0" layoutY="601.0" mnemonicParsing="false" onAction="#saveAsImage" prefHeight="50.0" prefWidth="150.0" text="Sačuvaj Potvrdu" />
         </children>
 </AnchorPane>
